# py_enumify

./: README.md  py_enumify.py  pyproject.toml
tests/: test_enumify.py
